remove SLE 11 statement (per feedback)

--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -35,15 +35,7 @@ For more information about using multiple servers, see xref:specialized-guides:l
 If the client was registered to SCC, SMT, or RMT previously, remove such a registration with [command]``SUSEConnect`` before migrating the client to {productname} Server.
 If you forget about removing the old registration first, it can happen that repositories not needed anymore getting automatically added to the client even after the client has been migrated to a newer version of a {suse} operating system using {productname}.
 
-* To de-register a {sle} 11 client, on the client, as root, execute:
-+
-
-----
-suse_register -E
-----
-
-* To de-register a {sle} 12 or 15 client, on the client, as root, execute:
-+
+To de-register a {sle} 12 or 15 client, on the client, as root, execute:
 
 ----
 SUSEConnect --de-register
@@ -51,4 +43,3 @@ SUSEConnect --cleanup
 ----
 
 For more information about detailed cleanup commands and verification steps, see https://www.suse.com/de-de/support/kb/doc/?id=000019054.
-
