add more info according to feedback

--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -6,9 +6,11 @@ This section details the networking and port requirements for {productname}.
 [IMPORTANT]
 ====
 IP forwarding will be enabled by containerized installation.
+This means {productname} Server and Proxies will behave as a router.
 This behavior is done by podman directly.
 podman containers do not run if IP forwarding is disabled.
-It is recommend to take measures for network isolation of the {productname} environment according to your policies.
+
+Consider achieving network network isolation of the {productname} environment according to your policies.
 
 For more information, see https://www.suse.com/support/kb/doc/?id=000020166.
 ====
