--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -10,7 +10,7 @@ This means {productname} Server and Proxies will behave as a router.
 This behavior is done by podman directly.
 podman containers do not run if IP forwarding is disabled.
 
-Consider achieving network network isolation of the {productname} environment according to your policies.
+Consider achieving network isolation of the {productname} environment according to your policies.
 
 For more information, see https://www.suse.com/support/kb/doc/?id=000020166.
 ====
