security: podman related IP forwarding (#3416)
* security: podman related IP forwarding
https://bugzilla.suse.com/show_bug.cgi?id=1224318
https://github.com/SUSE/spacewalk/issues/24352

--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -3,6 +3,19 @@
 
 This section details the networking and port requirements for {productname}.
 
+[IMPORTANT]
+====
+IP forwarding will be enabled by containerized installation.
+This means {productname} Server and Proxies will behave as a router.
+This behavior is done by podman directly.
+podman containers do not run if IP forwarding is disabled.
+
+Consider achieving network isolation of the {productname} environment according to your policies.
+
+For more information, see https://www.suse.com/support/kb/doc/?id=000020166.
+====
+
+
 == Fully Qualified Domain Name (FQDN)
 The {productname} server must resolve its FQDN correctly.
 If the FQDN cannot be resolved, it can cause serious problems in a number of different components.
