instructions about raw image usage

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -14,6 +14,7 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
+** xref:workflow-install-from-raw-image[Installation using RAW image]
 endif::[]
 
 ** xref:workflow-product-upgrade-webui.adoc[Product Upgrade via {webui}]
