De-register first from SCC or RMT/SMT (#3415)
https://github.com/SUSE/spacewalk/issues/23002
https://bugzilla.suse.com/show_bug.cgi?id=1216946

--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -10,9 +10,27 @@ You must also have created an activation key.
 For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 
+
 [IMPORTANT]
 ====
 Do not register a {productname} Server to itself.
 The {productname} Server must be managed individually or by using another separate {productname} Server.
 For more information about using multiple servers, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
+
+
+
+[[suse-registration-overview-check]]
+== Check Previous Registration Status
+
+If the client was registered to SCC, SMT, or RMT previously, remove such a registration with [command]``SUSEConnect`` before migrating the client to {productname} Server.
+If you forget about removing the old registration first, it can happen that repositories not needed anymore getting automatically added to the client even after the client has been migrated to a newer version of a {suse} operating system using {productname}.
+
+To de-register a {sle} 12 or 15 client, on the client, as root, execute:
+
+----
+SUSEConnect --de-register
+SUSEConnect --cleanup
+----
+
+For more information about detailed cleanup commands and verification steps, see https://www.suse.com/de-de/support/kb/doc/?id=000019054.
