--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -4,7 +4,7 @@ ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This chapter provides the Virtual Machine settings for deployment of {productname} {productnumber} as an image.
+This chapter provides the Virtual Machine settings for deployment of {productname} {productnumber} Proxy as an image.
 KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
 
 
