--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -77,14 +77,14 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 [[minimal.susemgr.prep]]
-== Register {sl-micro} and {productname} {productnumber} Server
+== Register {sle-micro} and {productname} {productnumber} Proxy
 
-Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
+// Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
-.Procedure: Registering {sl-micro} and {productname} {productnumber}
+.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
 . Boot the virtual machine.
 . Log in as `root`.
-. Register {sl-micro} with SCC.
+. Register {sle-micro} with SCC.
 +
 
 ----
