rewording using review proposal
https://github.com/uyuni-project/uyuni-docs/pull/3419

--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -33,7 +33,8 @@ For more information about using multiple servers, see xref:specialized-guides:l
 == Check Previous Registration Status
 
 If the client was registered to SCC, SMT, or RMT previously, remove such a registration with [command]``SUSEConnect`` before migrating the client to {productname} Server.
-If you forget about removing the old registration first, it can happen that repositories not needed anymore getting automatically added to the client even after the client has been migrated to a newer version of a {suse} operating system using {productname}.
+Do not forget to remove the old registration first.
+Otherwise repositories that are no longer needed, will be added to the client after the client has been migrated to a newer version of a {suse} operating system with {productname}.
 
 To de-register a {sle} 12 or 15 client, on the client, as root, execute:
 
