cont. with parallelizing

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -19,7 +19,7 @@ The preferred method for deploying {productname} {productnumber} Proxy is to use
 All tools are included in these images greatly simplifying deployment.
 ====
 
-Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
+Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
 [NOTE]
 ====
@@ -136,7 +136,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 
 . Reboot.
 
-. Register {productname} {productnumber} with {scc}.
+. Register {productname} {productnumber} Proxy with {scc}.
 +
 
 ----
@@ -183,7 +183,6 @@ For more information, see
 * xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
-
 
 
 
