--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -5,7 +5,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 This chapter provides the Virtual Machine settings for deployment of {productname} {productnumber} Proxy as an image.
-KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
+VMware will be used as a sandbox for this installation.
 
 
 
@@ -93,145 +93,14 @@ transactional-update register -r <REGCODE> -e <your_email>
 
 . Reboot.
 
-. Register {productname} {productnumber} with {scc}.
-+
-
-----
-transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
-----
-
-. Reboot
-. Update the system:
-+
-
-----
-transactional-update
-----
-
-. If updates were applied reboot.
-
-. This step is optional.
-  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-server`` tool.
-** For more information, see [command]``mgr-storage-server --help``.
-This tool simplifies creating the container storage and database volumes.
-
-** Use the command in the following manner:
-+
-
-----
-mgr-storage-server <storage-disk-device> [<database-disk-device>]
-----
-+
-For example:
-+
-----
-mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
-----
-+
-[NOTE]
-====
-This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
-. Run the following command to deploy {productname}:
-+
-
-----
-mgradm install podman <FQDN>
-----
-
-
-
-// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-[cols="1,1", options="header"]
-|===
-2+<| KVM Settings
-| Installation Method | Import Existing Disk Image
-| OS:                 | Linux
-| Version:            | {productname}-Proxy.x86_64-5.0.0-Build16.12.qcow2
-| Memory:             | 2 GB
-| CPU's:              | 2
-| Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
-| Name:               | test-setup
-| Network             | Bridge _br0_
-|===
-
-
-[NOTE]
-====
-[path]``/var/lib/containers/storage/volumes``
-Minimum 100 GB.  Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-====
-
-
-
-[[proxy-minimmal.kvm.setup]]
-== Initial KVM Setup
-
-.Procedure: Creating Initial Setup
-. Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
-. Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
-. Click btn:[Begin Installation] to boot from the image.
-. At the JeOS Firstboot screen select start to continue.
-+
-
-image::jeos-firstboot.png[]
-
-. Select keyboard layout.
-+
-
-image::select-keyboard.png[]
-
-.  Accept the license agreement.
-+
-
-image::accept-license-agreement.png[]
-
-. Select your time zone.
-+
-
-image::enter-timezone.png[]
-
-. Enter a password for root.
-+
-
-image::root-password.png[]
-
-. When installation completes log in as root.
-
-. Proceed to the next section.
-
-
-
-== Register {sle-micro} and {productname} {productnumber} Proxy
-
-
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
-. Boot the virtual machine.
-. Log in as `root`.
-. Register {sle-micro} with SCC.
-+
-
-----
-transactional-update register -r <REGCODE> -e <your_email>
-----
-
-. Reboot.
-
-. Register {productname} {productnumber} with {scc}.
+. Register {productname} {productnumber} Proxy with {scc}.
 +
 
 ----
 transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
 ----
 
-. Reboot.
+. Reboot
 
 . Update the system:
 +
@@ -245,13 +114,11 @@ transactional-update
 . This step is optional.
   However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
 ** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container volumes.
+This tool simplifies creating the container storage and database volumes.
 
 ** Use the command in the following manner:
 +
 
-// CHECKIT
-+
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
@@ -259,7 +126,7 @@ mgr-storage-proxy <storage-disk-device>
 For example:
 +
 ----
-mgr-storage-proxy /dev/nvme1n1
+mgr-storage-server /dev/nvme1n1
 ----
 +
 [NOTE]
@@ -271,7 +138,6 @@ For more information, see
 * xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
-
 
 
 
@@ -370,37 +236,6 @@ Five {productname} Proxy containers should be present:
 - proxy-ssh
 
 And should be part of the [literal]``proxy-pod`` container pod.
-
-
-////
-[[installation-proxy-containers-services]]
-== Install container services on the host system
-ifeval::[{suma-content} == true]
-
-[NOTE]
-====
-[literal]``Containers Module`` is required to be available for container host on a {sles} machine.
-====
-endif::[]
-
-{productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
-
-First step is to install the [literal]``mgrpxy`` utility provided by the package of the same name.
-
-ifeval::[{suma-content} == true]
-The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:Uyuni:/Stable:/ContainerUtils/.
-endif::[]
-
-To install them run:
-
-----
-zypper in helm mgrpxy
-----
-////
 
 
 === Using a Custom Container Image for a Service
