cont. with parallelizing

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -126,7 +126,7 @@ mgr-storage-proxy <storage-disk-device>
 For example:
 +
 ----
-mgr-storage-server /dev/nvme1n1
+mgr-storage-proxy /dev/nvme1n1
 ----
 +
 [NOTE]
@@ -141,6 +141,8 @@ For more information, see
 
 
 
+// FIXME: make this section a snippet or move it to a general intro for both,
+//        KVM and VMware
 == Create an Activation Key for the Proxy
 
 On the {productname} server, create an activation key for the Proxy.
