--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vmware]]
-= Deploy {productname} {productnumber} Proxy as a Virtual Machine - {vmware}
+= Deploy {productname} {productnumber} Proxy as a Virtual Machine - VMware
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
