organization name is case sensitive (#3421) (#3424)
https://github.com/SUSE/spacewalk/issues/23579

--- a/modules/administration/pages/iss_v2.adoc
+++ b/modules/administration/pages/iss_v2.adoc
@@ -68,4 +68,5 @@ Properties file location can be overridden with parameter ``--serverConfig``.
 == Known Limitations
 
 * Source and target servers need to be on the same version.
-* Export and import organization should have the same name.
+* Export and import organization should have exactly the same name.
+  The organization name is case sensitive.
