--- a/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
@@ -27,8 +27,8 @@ With an new repository data file, updates should operate as expected.
 .Procedure: Resolving Corrupt Repository Data
 . Remove all files from [path]``/var/cache/rhn/repodata/<channel-label>``.
     If you do not know the channel label, you can find it in the {productname} {webui}, by navigating to menu:Software[Channels > Channel Label].
-. Regenerate the file from the command line:
+. On the container host, regenerate the file from the command line:
 +
 ----
-spacecmd softwarechannel_regenerateyumcache <channel-label>
+mgrctl exec -ti -- spacecmd softwarechannel_regenerateyumcache <channel-label>
 ----
