update content and fix several typos and list continuations

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -23,6 +23,7 @@ endif::[]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
 **** {payg} on Azure
+***** xref:public-cloud-guide/payg/azure/suma-azure-payg-deployment.adoc[SUSE manager Deployment on Azure]
 ***** xref:public-cloud-guide/payg/azure/payg-azure-requirements.adoc[Azure requirements]
 ***** xref:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[1. Public Cloud Images]
 ***** xref:public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc[2. Configuration and Startup]
