SUSE Manager Proxy in Public Cloud https://github.com/SUSE/spacewalk/issues/25170

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
@@ -1,14 +1,14 @@
 [[quickstart-publiccloud-setup]]
-= Initial setup
+= Initial Setup
 
-This guide shows you the fastest way to get {productname} up and running in a public cloud using on-demand or BYOS services.
+This guide shows you the fastest way to get {productname} up and running in a public cloud using on-demand or {byos} services.
 We have tested using {productname} on Amazon EC2, Google Compute Engine, and Microsoft Azure, but these procedures should work with other public cloud providers as well, with some variation.
 
 There are three main methods of using {productname} on a public cloud service.
 
-Bring your own subscription (BYOS)::
-Most public cloud providers make a BYOS image of {productname} available.
-This means you do not need to install {productname}, just set up the server.
+{byoslongform} ({byos})::
+Most public cloud providers make a {byos} image of {productname} available.
+This means you do not need to install {productname}, just set up the server or proxy.
 You will need to have {suse} product entitlements before you begin, and there are some additional setup steps required.
 The public cloud documentation in the {productname} documentation suite assumes you are using this method.
 
@@ -25,14 +25,34 @@ You will need to have {suse} product entitlements before you begin.
 Be careful with this method, because you might end up requiring additional product entitlements that could drive up your costs.
 
 
-If you are using the BYOS method, start by logging in to your chosen public cloud provider, and launching a {productname} instance.
-Depending on the public cloud you are using, you can usually locate the {productname} Server BYOS images by searching for ``suse manager``.
+
+== {productname} Server
+
+If you are using the {byos} method, start by logging in to your chosen public cloud provider, and launching a {productname} instance.
+Depending on the public cloud you are using, you can usually locate the {productname} Server {byos} images by searching for ``suse manager``.
 In EC2, you need to search within the Community AMIs.
 In GCE and Azure, search the marketplace.
 
 Select a public cloud instance type that meets the hardware  and networking requirements in xref:installation-and-upgrade:pubcloud-requirements.adoc[].
 
-When you have your virtual machine ready, and the BYOS image installed, you need to set up {productname}.
+When you have your virtual machine ready, and the {byos} image installed, you need to set up {productname} Server.
 This is done in the same way as a local installation, using {yast}.
 When you have completed {productname} setup, you need to activate the public cloud module.
-You can then complete setup in the {productname} {webui}.
+You can then complete the setup in the {productname} {webui}.
+
+
+
+== {productname} Proxy
+
+You must use the {byos} method.
+Start by logging in to your chosen public cloud provider, and launch a {productname} Proxy instance.
+Depending on the public cloud you are using, you can usually locate the {productname} Proxy {byos} images by searching for ``suse manager proxy``.
+In EC2, you need to search within the Community AMIs.
+In GCE and Azure, search the marketplace.
+
+Select a public cloud instance type that meets the hardware  and networking requirements in xref:installation-and-upgrade:pubcloud-requirements.adoc[].
+
+When you have your virtual machine ready, and the {byos} image installed, you need to set up {productname} Proxy.
+This is done in the same way as a local installation, using {suse} setup tools.
+When you have completed {productname} Proxy setup, you need to activate the public cloud module.
+// You can then complete setup in the {productname} {webui}.
