--- a/modules/specialized-guides/pages/public-cloud-guide/overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/overview.adoc
@@ -4,6 +4,8 @@
 **Updated:** {docdate}
 
 This guide shows you the fastest way to get {productname} up and running in a public cloud environment using on-demand, {payglongform} ({payg}), or {byoslongform} ({byos}) services.
+{productname} Proxy in a public cloud is only supported using {byos} services.
+
 // Is this statement correct regarding PAYG?
 Additionally, it assumes that you are installing the {productname} Server on a single cloud instance.
 These procedures have been tested on {awslongform}, {azure}, and {gcplongform}.
