--- a/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
+++ b/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
@@ -25,7 +25,7 @@ You will have created a basic CLM project, and promoted it through its lifecycle
 
 Before you start, you should already have:
 
-* {productname} Server installed, which you can access using the {webui}.
+* {productname} Server deployed, and accessible using the {webui}.
 * Client machine with an operating system installed, which you can access across the network that your {productname} Server is on, using SSH.
 * Appropriate subscriptions from http://scc.suse.com for the products you are using.
 
