--- a/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
+++ b/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
@@ -25,7 +25,7 @@ You will have created a basic CLM project, and promoted it through its lifecycle
 
 Before you start, you should already have:
 
-* {productname} Server installed, which you can access using the {webui}.
+* {productname} Server deployed, and accessible using the {webui}.
 * Client machine with an operating system installed, which you can access across the network that your {productname} Server is on, using SSH.
 * Appropriate subscriptions from http://scc.suse.com for the products you are using.
 
@@ -35,38 +35,35 @@ Before you start, you should already have:
 
 .Procedure: Create a new CLM Project
 [role=peocedure]
-. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and click btn:[Create Project].
-  Type a name, label, and description for your project, and click btn:[Create].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects] section, and click btn:[Create Project].
 +
-image::clm_new_project.png[scaledwidth=80%]
+Type a name, label, and description for your project, and click btn:[Create].
 . In the [guimenu]``Sources`` section, click btn:[Attach/Detach Sources].
-  Select the source type, and select a base channel for your project.
-  The available child channels for the selected base channel are displayed, including information on whether the channel is mandatory or recommended.
-  Check the child channels you require, and click btn:[Save] to return to the project page.
 +
-image::clm_add_sources.png[scaledwidth=80%]
+Select the source type, and select a base channel for your project.
++
+The available child channels for the selected base channel are displayed, including information on whether the channel is mandatory or recommended.
+Check the child channels you require, and click btn:[Save] to return to the project page.
 . Leave the [guimenu]``Filters`` section blank for now, we will not be using them in this example.
   You can add filters later on if you need to.
-. In the [guimenu]``Environment Lifecycle`` section, create three environments: ``production``, ``testing``, and ``development``.
-  Click btn:[Add Environment] and complete the name and label for each.
-  For the ``production`` environment, leave the [guimenu]``Insert before`` field blank.
-  For the ``testing`` environment, in the [guimenu]``Insert before`` field, select ``production``.
-  For the ``development`` environment, in the [guimenu]``Insert before field, select ``testing``.
+. In the [guimenu]``Environment Lifecycle`` section, create three environments: ``production``, ``testing``, and ``development``. Click btn:[Add Environment] and complete the name and label for each.
 +
-image::clm_environments.png[scaledwidth=80%]
+For the ``production`` environment, leave the [guimenu]``Insert before`` field blank.
++
+For the ``testing`` environment, in the [guimenu]``Insert before`` field, select ``production``.
++
+For the ``development`` environment, in the [guimenu]``Insert before`` field, select ``testing``.
 . Click btn:[Build] to build version 1 of your project:
-+
-image::clm_build_1.png[scaledwidth=80%]
 
 
 .Procedure: Assign Clients
 [role=procedure]
 . Navigate to menu:Systems[System List], select the client to assign, and go to the menu:Software[Software Channels] tab.
 . In the [guimenu]``Base Channel`` section, select the CLM project and environment you want to assign the client to.
-  For example, if you want this client to receive updates from your CLM only when packages are in the ``production`` environment, assign the base channel ``<CLM_Project_Name>-production-<Channel_Name>``.
-  Alternatively, you could use this client as a way to test if your CLM packages are working as expected before you promote them to ``development``, so you assign the base channel ``<CLM_Project_Name>-testing-<Channel_Name>``.
 +
-image::clm_assign.png[scaledwidth=80%]
+For example, if you want this client to receive updates from your CLM only when packages are in the ``production`` environment, assign the base channel ``<CLM_Project_Name>-production-<Channel_Name>``.
++
+Alternatively, you could use this client as a way to test if your CLM packages are working as expected before you promote them to ``development``, so you assign the base channel ``<CLM_Project_Name>-testing-<Channel_Name>``.
 . Click btn:[Next] to assign the client.
 
 .Procedure: Promote Environments
@@ -74,8 +71,6 @@ image::clm_assign.png[scaledwidth=80%]
   . In the {productname} {webui}, navigate to menu:Content Lifecycle[Projects], and select the project you want to work with.
   . In the [guimenu]``Environment Lifecycle`` section, locate the environment to promote to its successor, and click btn:[Promote].
     You can monitor build progress in the [guimenu]``Environment Lifecycle`` section.
-+
-image::clm_promote.png[scaledwidth=80%]
 
 
 
