--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -85,6 +85,11 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
+[NOTE]
+====
+The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
+====
+
 .Procedure: Registering {sl-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
