Iau server reg #1230833 (#3437)
* micro entitlement is included
https://github.com/SUSE/spacewalk/issues/25269
https://bugzilla.suse.com/show_bug.cgi?id=1230833

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -133,7 +133,7 @@ Depending on the specific extension needed from the list below, additional {scc}
 +
 [IMPORTANT]
 ====
-The {sle-micro} {microversion} entitlement is included within the SUSE Manager entitlement, so it does not require a separate registration code.
+The {sle-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
 ====
 
 . Enter your {scc} email address.
