--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -121,6 +121,10 @@ image::root-password.png[]
 
 // note for 5.0 backport: 5.0 should have sle-micro
 
+[NOTE]
+====
+The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
+====
 
 .Procedure: Registering {sle-micro} and {productname} {productnumber}
 . Boot the virtual machine.
