Missing SLE Micro 5.5 tools for Uyuni added.

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -174,6 +174,8 @@ To add the client tools, add these channels from the command prompt:
 | OS Version
 | Client Channel
 
+| {sle-micro} 5.5
+| sle-micro-5.5-uyuni-client
 
 | {sle-micro} 5.4
 | sle-micro-5.4-uyuni-client
