--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -25,7 +25,7 @@ Successful completion of this workflow results in successful installation of {pr
 
 == Step-by-step Instructions
 
-[WARNING]
+[NOTE]
 ====
 This workflow is complex and time-consuming.
 Make sure that adequate testing is done before deploying the procedure in live environment.
