--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -88,6 +88,15 @@ server.susemanager.forward_registration = 0
 ----
 +
 
+[WARNING]
+====
+Disabling data sync with SCC will lead to reduced visibility of your managed clients between RMT, SMT, SUSE Manager and SCC	directly registered clients.
+
+By syncing data, you ensure a uniform view of all registered clients.
+
+https://suselinux.fra1.qualtrics.com/jfe/form/SV_0ooNnrY0rYuQScS[Help us improve our services by sharing your reason for opting out]
+====
+
 menu:mgr-sync-refresh-default[]::
 Synchronizes with {scc} (``mgr-sync-refresh``).
 By default, all custom channels are also synchronized as part of this task.
