--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -94,7 +94,7 @@ Disabling data synchronizing with SCC will lead to reduced visibility of your ma
 
 By synchronizing data, you ensure a uniform view of all registered clients.
 
-For more information, see https://suselinux.fra1.qualtrics.com/jfe/form/SV_0ooNnrY0rYuQScS[Help us improve our services by sharing your reason for opting out].
+https://suselinux.fra1.qualtrics.com/jfe/form/SV_0ooNnrY0rYuQScS[Help us improve our services by sharing your reason for opting out].
 ====
 
 menu:mgr-sync-refresh-default[]::
