--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -87,6 +87,12 @@ To disable synchronization set in [path]``/etc/rhn/rhn.conf``, run:
 server.susemanager.forward_registration = 0
 ----
 +
+[WARNING]
+====
+Disabling data synchronizing with SCC will lead to reduced visibility of your managed clients between RMT, SMT, {productname} and SCC-directly registered clients.
+By synchronizing data, you ensure a uniform view of all registered clients.
+https://suselinux.fra1.qualtrics.com/jfe/form/SV_0ooNnrY0rYuQScS[Help us improve our services by sharing your reason for opting out]
+====
 
 menu:mgr-sync-refresh-default[]::
 Synchronizes with {scc} (``mgr-sync-refresh``).
